--- a/app/src/entries/login/components/root/index.less
+++ b/app/src/entries/login/components/root/index.less
@@ -4,11 +4,7 @@
 	display: flex;
 	align-items: center;
 	flex-direction: column;
-	background: linear-gradient(
-		to right bottom,
-		rgba(45, 188, 197, 1),
-		rgba(18, 18, 56, 1)
-	);
+	background: #20203b;
 	.devChoose {
 		margin: 1rem 0;
 	}
