--- a/app/src/entries/login/components/root/index.less
+++ b/app/src/entries/login/components/root/index.less
@@ -1,105 +1,2 @@
-.loginpage {
-	width: 100%;
-	height: 100%;
-	display: flex;
-	align-items: center;
-	flex-direction: column;
-	background: #20203b;
-	.devChoose {
-		margin: 1rem 0;
-	}
-	.devButton {
-		margin: 0 0.5rem;
-	}
-	.login-title1,
-	.login-title2 {
-		margin: 0;
-		font-size: 0.36rem;
-		line-height: 0.5rem;
-		color: #fff;
-	}
-	.login-title1 {
-		margin-top: 1.5rem;
-	}
-	.login-phoneNum {
-		width: 4.44rem;
-		height: 0.46rem;
-		border-radius: 0.1rem;
-		background: rgba(255, 255, 255, 0.33);
-		position: relative;
-		margin-top: 0.8rem;
-		input {
-			display: block;
-			width: 100%;
-			height: 100%;
-			background: transparent;
-			outline: none;
-			border: 0;
-			color: #fff;
-			line-height: 0.46rem;
-			font-size: 0.2rem;
-			box-sizing: border-box;
-			padding-left: 0.3rem;
-			&::-webkit-input-placeholder {
-				color: #fff;
-			}
-		}
-		button {
-			position: absolute;
-			right: 0.08rem;
-			top: 50%;
-			transform: translateY(-50%);
-			z-index: 1;
-			width: 0.6rem;
-			height: 0.3rem;
-			border-radius: 0.1rem;
-			outline: none;
-			background: #205779;
-			font-size: 0.14rem;
-			text-align: center;
-			line-height: 0.3em;
-			border: 0;
-			color: #fff;
-			cursor: pointer;
-		}
-	}
-	.login-code {
-		width: 4.44rem;
-		height: 0.46rem;
-		border-radius: 0.1rem;
-		background: rgba(255, 255, 255, 0.33);
-		margin-top: 0.4rem;
-		input {
-			display: block;
-			width: 100%;
-			height: 100%;
-			background: transparent;
-			outline: none;
-			border: 0;
-			color: #fff;
-			line-height: 0.46rem;
-			font-size: 0.2rem;
-			box-sizing: border-box;
-			padding-left: 0.3rem;
-			&::-webkit-input-placeholder {
-				color: #fff;
-			}
-		}
-	}
-	.login-inbtn {
-		margin: 0.4rem auto 0 auto;
-		width: 1.5rem;
-		height: 0.44rem;
-		border-radius: 0.1rem;
-		background: linear-gradient(
-			to right bottom,
-			rgba(130, 224, 172, 1),
-			rgba(71, 196, 127, 1)
-		);
-		font-size: 0.18rem;
-		color: #fff;
-		border: 0;
-		outline: none;
-		cursor: pointer;
-	}
+.login {
 }
