--- a/app/src/assets/less/common.less
+++ b/app/src/assets/less/common.less
@@ -187,21 +187,26 @@ button {
 		);
 	}
 }
-.backBtn {
-	position: absolute;
-	left: 0.2rem;
-	top: 0.2rem;
-	z-index: 10;
-	width: 0.26rem;
-	height: 0.26rem;
-	cursor: pointer;
-	background: url("../../assets/images/back_default.png") no-repeat center
-		center / cover;
-	&:hover {
-		background: url("../../assets/images/back_hover.png") no-repeat center
-			center / cover;
-	}
+html,
+body {
+	height: 100%;
+	background: #20203b;
 }
+// .backBtn {
+// 	position: absolute;
+// 	left: 0.2rem;
+// 	top: 0.2rem;
+// 	z-index: 10;
+// 	width: 0.26rem;
+// 	height: 0.26rem;
+// 	cursor: pointer;
+// 	background: url("../../assets/images/back_default.png") no-repeat center
+// 		center / cover;
+// 	&:hover {
+// 		background: url("../../assets/images/back_hover.png") no-repeat center
+// 			center / cover;
+// 	}
+// }
 .f1 {
 	flex: 1;
 }
