--- a/app/src/entries/login/components/root/index.less
+++ b/app/src/entries/login/components/root/index.less
@@ -1,2 +1,12 @@
 .login {
+	align-items: center;
+	justify-content: center;
+	height: 100%;
+	.login-content {
+		width: 3.8rem;
+		height: 3rem;
+		background: #2e2e4c;
+		border-radius: 0.08rem;
+		border: none;
+	}
 }
