--- a/app/src/assets/less/common.less
+++ b/app/src/assets/less/common.less
@@ -9,23 +9,23 @@ body {
 	width: 100%;
 	height: 100%;
 }
-.mainBox {
-	overflow: hidden;
-	width: 100%;
-	height: 100%;
-	// min-width: 6.7rem;
-	// min-height: 7.5rem;
-	background: #20203b;
-}
-.home-box {
-	position: relative;
-	height: 100%;
-	background: #20203b;
-	display: flex;
-	flex-direction: column;
-	overflow: auto;
-	overflow-x: hidden;
-}
+// .mainBox {
+// 	overflow: hidden;
+// 	width: 100%;
+// 	height: 100%;
+// 	// min-width: 6.7rem;
+// 	// min-height: 7.5rem;
+// 	// background: #20203b;
+// }
+// .home-box {
+// 	position: relative;
+// 	height: 100%;
+// 	background: #20203b;
+// 	display: flex;
+// 	flex-direction: column;
+// 	overflow: auto;
+// 	overflow-x: hidden;
+// }
 .ui {
 	display: flex;
 }
