--- a/app/src/entries/login/components/root/index.less
+++ b/app/src/entries/login/components/root/index.less
@@ -1,4 +1,5 @@
 .login {
+	display: flex;
 	align-items: center;
 	justify-content: center;
 	height: 100%;
@@ -7,6 +8,5 @@
 		height: 3rem;
 		background: #2e2e4c;
 		border-radius: 0.08rem;
-		border: none;
 	}
 }
