--- a/app/src/assets/less/common.less
+++ b/app/src/assets/less/common.less
@@ -9,23 +9,23 @@ body {
 	width: 100%;
 	height: 100%;
 }
-// .mainBox {
-// 	overflow: hidden;
-// 	width: 100%;
-// 	height: 100%;
-// 	// min-width: 6.7rem;
-// 	// min-height: 7.5rem;
-// 	// background: #20203b;
-// }
-// .home-box {
-// 	position: relative;
-// 	height: 100%;
-// 	background: #20203b;
-// 	display: flex;
-// 	flex-direction: column;
-// 	overflow: auto;
-// 	overflow-x: hidden;
-// }
+.mainBox {
+	overflow: hidden;
+	width: 100%;
+	height: 100%;
+	// min-width: 6.7rem;
+	// min-height: 7.5rem;
+	// background: #20203b;
+}
+.home-box {
+	position: relative;
+	height: 100%;
+	background: #20203b;
+	display: flex;
+	flex-direction: column;
+	overflow: auto;
+	overflow-x: hidden;
+}
 .ui {
 	display: flex;
 }
@@ -68,22 +68,22 @@ body {
 .ui.ai-c {
 	align-items: center;
 }
-.Center {
-	position: absolute;
-	left: 50%;
-	top: 50%;
-	transform: translate(-50%, -50%);
-}
-.Ycenter {
-	position: absolute;
-	top: 50%;
-	transform: translate(0, -50%);
-}
-.Xcenter {
-	position: absolute;
-	left: 50%;
-	transform: translate(-50%, 0);
-}
+// .Center {
+// 	position: absolute;
+// 	left: 50%;
+// 	top: 50%;
+// 	transform: translate(-50%, -50%);
+// }
+// .Ycenter {
+// 	position: absolute;
+// 	top: 50%;
+// 	transform: translate(0, -50%);
+// }
+// .Xcenter {
+// 	position: absolute;
+// 	left: 50%;
+// 	transform: translate(-50%, 0);
+// }
 .W {
 	width: 100%;
 }
