--- a/app/src/assets/less/common.less
+++ b/app/src/assets/less/common.less
@@ -308,3 +308,11 @@ body {
 		box-sizing: border-box;
 	}
 }
+
+//pc端钱包
+.contentContainer {
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+	height: 100%;
+}
