--- a/app/src/components/menu/index.less
+++ b/app/src/components/menu/index.less
@@ -2,11 +2,7 @@
 	height: 100%;
 	width: 2.24rem;
 	overflow: scroll;
-	background: linear-gradient(
-		to right bottom,
-		rgba(45, 188, 197, 1),
-		rgba(18, 18, 56, 1)
-	);
+	background: #2e2e4c;
 }
 .user-logo {
 	display: block;
@@ -53,38 +49,10 @@
 			.childMenu {
 				opacity: 1;
 			}
-			.menu-project {
-				background: url("../../assets/images/xiangmuku_ico_selected.png")
-					no-repeat center center / contain;
-			}
-			.menu-news {
-				background: url("../../assets/images/zixunguanli_ico_selected.png")
-					no-repeat center center / contain;
-			}
-			.menu-trading {
-				background: url("../../assets/images/kongtoushezhi_ico_selected.png")
-					no-repeat center center / contain;
-			}
-			.menu-swiper {
-				background: url("../../assets/images/lunbozixun_ico.png")
-					no-repeat center center / contain;
-			}
-			.menu-comment {
-				background: url("../../assets/images/pinglunguanli_ico_selected.png")
-					no-repeat center center / contain;
-			}
-			.menu-user {
-				background: url("../../assets/images/yonghuguanli_ico_selected.png")
-					no-repeat center center / contain;
-			}
-			.menu-wallet {
-				background: url("../../assets/images/qianbaoguanli_ico_selected.png")
-					no-repeat center center / contain;
-			}
-			.menu-system {
-				background: url("../../assets/images/xitongshezhi_ico_selected.png")
-					no-repeat center center / contain;
-			}
+			// .menu-project {
+			// 	background: url("../../assets/images/xiangmuku_ico_selected.png")
+			// 		no-repeat center center / contain;
+			// }
 		}
 		.childMenu {
 			opacity: 0;
@@ -128,37 +96,37 @@
 			padding-left: 0.86rem;
 			box-sizing: border-box;
 		}
-		.menu-project {
-			background: url("../../assets/images/xiangmuku_ico.png") no-repeat
-				center center / contain;
-		}
-		.menu-news {
-			background: url("../../assets/images/zixunguanli_ico.png") no-repeat
-				center center / contain;
-		}
-		.menu-trading {
-			background: url("../../assets/images/kongtoushezhi_ico.png")
-				no-repeat center center / contain;
-		}
-		.menu-swiper {
-			background: url("../../assets/images/lunboguanli_ico.png") no-repeat
-				center center / contain;
-		}
-		.menu-comment {
-			background: url("../../assets/images/pinglunguanli_ico.png")
-				no-repeat center center / contain;
-		}
-		.menu-user {
-			background: url("../../assets/images/yonghuguanli_ico.png")
-				no-repeat center center / contain;
-		}
-		.menu-wallet {
-			background: url("../../assets/images/qianbaoguanli_ico.png")
-				no-repeat center center / contain;
-		}
-		.menu-system {
-			background: url("../../assets/images/xitongshezhi_ico.png")
-				no-repeat center center / contain;
-		}
+		// .menu-project {
+		// 	background: url("../../assets/images/xiangmuku_ico.png") no-repeat
+		// 		center center / contain;
+		// }
+		// .menu-news {
+		// 	background: url("../../assets/images/zixunguanli_ico.png") no-repeat
+		// 		center center / contain;
+		// }
+		// .menu-trading {
+		// 	background: url("../../assets/images/kongtoushezhi_ico.png")
+		// 		no-repeat center center / contain;
+		// }
+		// .menu-swiper {
+		// 	background: url("../../assets/images/lunboguanli_ico.png") no-repeat
+		// 		center center / contain;
+		// }
+		// .menu-comment {
+		// 	background: url("../../assets/images/pinglunguanli_ico.png")
+		// 		no-repeat center center / contain;
+		// }
+		// .menu-user {
+		// 	background: url("../../assets/images/yonghuguanli_ico.png")
+		// 		no-repeat center center / contain;
+		// }
+		// .menu-wallet {
+		// 	background: url("../../assets/images/qianbaoguanli_ico.png")
+		// 		no-repeat center center / contain;
+		// }
+		// .menu-system {
+		// 	background: url("../../assets/images/xitongshezhi_ico.png")
+		// 		no-repeat center center / contain;
+		// }
 	}
 }
