--- a/app/src/assets/less/base.less
+++ b/app/src/assets/less/base.less
@@ -123,6 +123,10 @@ hr {
 }
 html {
 	overflow-y: scroll;
+	font-size: 100px !important;
+}
+body {
+	font-size: 0.14rem !important;
 }
 /* 浮动 */
 .left {
