--- a/app/src/entries/login/components/root/index.less
+++ b/app/src/entries/login/components/root/index.less
@@ -8,5 +8,38 @@
 		height: 3rem;
 		background: #2e2e4c;
 		border-radius: 0.08rem;
+		.login-header {
+			text-align: center;
+			height: 0.5rem;
+			.login-img {
+				width: 1rem;
+				height: 1rem;
+				position: relative;
+				top: -0.5rem;
+			}
+		}
+		.login-name {
+			text-align: center;
+			margin-top: 0.2rem;
+		}
+		.loginname {
+			width: 1.16rem;
+		}
+		.login-btn {
+			text-align: center;
+			margin-top: 1.12rem;
+			.loginbtn {
+				display: inline-block;
+				width: 2.2rem;
+				height: 0.44rem;
+				line-height: 0.44rem;
+				color: #fff;
+				font-size: 0.2rem;
+				border-radius: 0.04rem;
+				font-weight: 200;
+				cursor: pointer;
+				background: linear-gradient(to right, #82e0ac, #47c47f);
+			}
+		}
 	}
 }
