--- a/app/src/entries/createwallet/components/root/index.less
+++ b/app/src/entries/createwallet/components/root/index.less
@@ -12,12 +12,13 @@
 		display: flex;
 		justify-content: center;
 		color: #fff;
+
 		.create-group {
 			width: 2.4rem;
 			margin: 0 0.1rem;
-			position: absolute;
+			position: relative;
 			transform-style: preserve-3d;
-
+			min-height: 3.4rem;
 			.wallet-img {
 				width: 1rem;
 				height: 1rem;
