--- a/app/src/components/headernav/index.less
+++ b/app/src/components/headernav/index.less
@@ -1,3 +1,44 @@
 .header-nav {
-	height: 50px;
+	position: relative;
+	height: 0.5rem;
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	border: 1px solid #2e2e4c;
+	.left {
+		width: 2rem;
+		height: 100%;
+		align-items: center;
+		.btn-back {
+			margin-left: 0.4rem;
+			height: 0.18rem;
+			width: 0.12rem;
+			cursor: pointer;
+		}
+		.btn-prev {
+			margin-left: 0.3rem;
+			height: 0.18rem;
+			width: 0.12rem;
+			cursor: pointer;
+		}
+		.btn-home {
+			margin-left: 0.5rem;
+			width: 0.2rem;
+			height: 0.18rem;
+			cursor: pointer;
+		}
+	}
+	.right {
+		width: 0.5rem;
+		height: 100%;
+		margin-right: 0.4rem;
+		align-items: center;
+		justify-content: flex-end;
+		.btn-refresh {
+			width: 0.18rem;
+			height: 0.18rem;
+			cursor: pointer;
+		}
+	}
 }
