--- a/app/src/entries/importkeystore/components/root/index.less
+++ b/app/src/entries/importkeystore/components/root/index.less
@@ -51,6 +51,9 @@
 			width: 100%;
 			padding: 0.1rem;
 			box-sizing: border-box;
+			background: rgba(0, 0, 0, 0.17);
+			outline: none;
+			border-radius: 0.08rem;
 		}
 		.icon-openfile {
 			display: block;
@@ -59,6 +62,7 @@
 			background: url("../../../../assets/images/file_icon.png") left top
 				no-repeat;
 			background-size: 100% 100% !important;
+			margin-left: 0.1rem;
 		}
 	}
 }
