--- a/app/src/entries/importkeystore/components/root/index.less
+++ b/app/src/entries/importkeystore/components/root/index.less
@@ -65,4 +65,18 @@
 			margin-left: 0.1rem;
 		}
 	}
+	.key-next {
+		padding: 1.53rem 0 0.36rem 0;
+		text-align: center;
+		.keybtn {
+			display: inline-block;
+			width: 2rem;
+			height: 0.44rem;
+			border-radius: 0.08rem;
+			color: #fff;
+			font-size: 0.18rem;
+			line-height: 0.44rem;
+			background: linear-gradient(to right, #82e0ac, #47c47f);
+		}
+	}
 }
