--- a/app/src/entries/importend/components/root/index.less
+++ b/app/src/entries/importend/components/root/index.less
@@ -1,2 +1,46 @@
 .importend {
+	.title {
+		padding: 0.4rem 0;
+		font-size: 0.3rem;
+		color: #47d184;
+		text-align: center;
+	}
+	.end-container {
+		.end-box {
+			width: 7.7rem;
+			max-width: 90%;
+			background: #2e2e4c;
+			border-radius: 0.08rem;
+			box-sizing: border-box;
+			padding: 0.2rem;
+		}
+		.end-item {
+			padding: 0.15rem 0;
+		}
+		.input {
+			width: 100%;
+			background: rgba(0, 0, 0, 0.21);
+			border-radius: 0.08rem;
+			border: none;
+			outline: none;
+			box-sizing: border-box;
+			padding: 0.1rem;
+			color: rgba(255, 255, 255, 0.41);
+		}
+		.endbtn {
+			padding: 2.4rem 0 0.36rem 0;
+			text-align: center;
+			.btn {
+				display: inline-block;
+				width: 2rem;
+				height: 0.44rem;
+				line-height: 0.44rem;
+				border-radius: 0.08rem;
+				color: #fff;
+				font-size: 0.18rem;
+				background: linear-gradient(to right, #82e0ac, #47c47f);
+				margin: 0 0.24rem;
+			}
+		}
+	}
 }
