--- a/app/src/entries/neowallet/components/root/index.less
+++ b/app/src/entries/neowallet/components/root/index.less
@@ -31,5 +31,57 @@
 		border-radius: 0.08rem;
 		box-sizing: border-box;
 		padding: 0.2rem;
+		.nav-item {
+			display: inline-block;
+			margin: 0 0.2rem;
+			font-size: 0.18rem;
+			color: #55557d;
+			&.cur {
+				color: #47d184;
+			}
+		}
+		.box-btn {
+			margin-left: 0.2rem;
+			padding: 0 0.08rem;
+			height: 0.36rem;
+			border-radius: 0.08rem;
+			display: flex;
+			font-size: 0.14rem;
+			color: #fff;
+			flex-flow: column;
+			justify-content: center;
+			// align-items: center;
+			cursor: pointer;
+			background: linear-gradient(to right, #ffcdc1, #e63d00);
+			.t2 {
+				font-size: 0.12rem;
+				line-height: 1;
+			}
+			.t1 {
+				line-height: 1;
+			}
+		}
+	}
+	.box3 {
+		position: absolute;
+		left: 0.4rem;
+		right: 0.4rem;
+		bottom: 0.4rem;
+		top: 2.71rem;
+		background: #2e2e4c;
+		border-radius: 0.08rem;
+		box-sizing: border-box;
+		overflow: auto;
+		padding: 0.2rem;
+		.wallet-item {
+			padding: 0.25rem 0;
+			color: #fff;
+			border-bottom: 1px solid #373755;
+			.icon {
+				width: 0.4rem;
+				height: 0.4rem;
+				margin-right: 0.1rem;
+			}
+		}
 	}
 }
