--- a/app/src/assets/less/common.less
+++ b/app/src/assets/less/common.less
@@ -326,3 +326,16 @@ body {
 		}
 	}
 }
+//按钮
+.button-green {
+	background: linear-gradient(to right, #82e0ac, #47c47f);
+	width: 2rem;
+	height: 0.44rem;
+	border-radius: 0.08rem;
+	line-height: 0.44rem;
+	text-align: center;
+	display: inline-block;
+	font-size: 0.18rem;
+	color: #fff;
+	cursor: pointer;
+}
