--- a/app/src/entries/neowallet/components/root/index.less
+++ b/app/src/entries/neowallet/components/root/index.less
@@ -16,6 +16,15 @@
 			color: #5c89eb;
 			font-size: 0.24rem;
 		}
+		.watch {
+			color: #ff7044;
+			padding: 0.05rem 0.15rem;
+			border: 1px solid #ff7044;
+			border-radius: 0.2rem;
+			font-size: 0.14rem;
+			vertical-align: middle;
+			margin-left: 0.2rem;
+		}
 		.name {
 			font-size: 0.3rem;
 			color: #fff;
@@ -59,6 +68,9 @@
 				#e63d00 40%,
 				#e63d00 100%
 			);
+			&.disabled {
+				background: #c9c6c6;
+			}
 			.t2 {
 				font-size: 0.12rem;
 				line-height: 1;
@@ -94,6 +106,55 @@
 			.t1 {
 				font-size: 0.12rem;
 			}
+		}
+	}
+	.box4 {
+		margin-top: 0.2rem;
+		background: #2e2e4c;
+		border-radius: 0.08rem;
+		box-sizing: border-box;
+		padding: 0.2rem;
+		color: #fff;
+		.send-item {
+			margin-bottom: 0.3rem;
+		}
+		.send-name {
+			margin-bottom: 0.1rem;
+			font-size: 0.18rem;
+			.t1 {
+				font-size: 0.14rem;
+			}
+		}
+		.input-box {
+			border-radius: 0.08rem;
+			overflow: hidden;
+		}
+		.input {
+			width: 100%;
+			height: 0.6rem;
+			background: rgba(0, 0, 0, 0.21);
+
+			border: none;
+			box-sizing: border-box;
+			padding: 0 0.1rem;
+			font-size: 0.18rem;
+			color: rgba(255, 255, 255, 0.4);
+		}
+		.btn-box {
+			padding: 0.5rem 0 0.3rem 0;
+			text-align: center;
+		}
+		.ant-select-selection--single {
+			height: 0.6rem;
+			border: none;
+		}
+		.ant-select-selection {
+			border-radius: 0;
+			background: linear-gradient(to right, #ffcdc1, #e63d00);
+		}
+		.ant-select-selection__rendered {
+			line-height: 0.6rem;
+			color: #fff;
 		}
 	}
 }
