--- a/app/src/entries/watchwallet/components/root/index.less
+++ b/app/src/entries/watchwallet/components/root/index.less
@@ -16,6 +16,15 @@
 			color: #5c89eb;
 			font-size: 0.24rem;
 		}
+		.watch {
+			color: #ff7044;
+			padding: 0.05rem 0.15rem;
+			border: 1px solid #ff7044;
+			border-radius: 0.2rem;
+			font-size: 0.14rem;
+			vertical-align: middle;
+			margin-left: 0.2rem;
+		}
 		.name {
 			font-size: 0.3rem;
 			color: #fff;
