--- a/app/src/assets/less/common.less
+++ b/app/src/assets/less/common.less
@@ -340,5 +340,5 @@ body {
 	cursor: pointer;
 }
 .line-orange {
-	background: linear-gradient(to right, #ef7247, #47c47f);
+	background: linear-gradient(to right, #ef7247, #e63d00);
 }
