--- a/app/src/entries/neowallet/components/root/index.less
+++ b/app/src/entries/neowallet/components/root/index.less
@@ -144,11 +144,62 @@
 		}
 		.ant-select-selection {
 			border-radius: 0;
-			background: linear-gradient(to right, #ffcdc1, #e63d00);
+			background: linear-gradient(to right, #ef7247, #e63d00);
 		}
 		.ant-select-selection__rendered {
 			line-height: 0.6rem;
 			color: #fff;
+		}
+		.ant-select-arrow {
+			color: #fff;
+		}
+	}
+	.box5 {
+		margin-top: 0.2rem;
+		background: #2e2e4c;
+		border-radius: 0.08rem;
+		box-sizing: border-box;
+		text-align: center;
+		color: #fff;
+		.receive-title {
+			padding: 0.4rem 0;
+			font-size: 0.24rem;
+		}
+
+		.qcode {
+			width: 2rem;
+			height: 2rem;
+			box-sizing: border-box;
+			border: 0.05rem solid #fff;
+		}
+		.btn-box {
+			padding: 0.5rem 0;
+			.button-green {
+				width: 1.6rem;
+				margin: 0 0.2rem;
+			}
+			.t {
+				vertical-align: middle;
+				margin-left: 0.05rem;
+			}
+		}
+		.icon-copy {
+			background: url("../../../../assets/images/copy_ico.png") left top
+				no-repeat;
+			display: inline-block;
+			vertical-align: middle;
+			width: 0.19rem;
+			height: 0.19rem;
+			background-size: 100% 100%;
+		}
+		.icon-print {
+			background: url("../../../../assets/images/dayin_ico.png") left top
+				no-repeat;
+			display: inline-block;
+			vertical-align: middle;
+			width: 0.19rem;
+			height: 0.19rem;
+			background-size: 100% 100%;
 		}
 	}
 }
