--- a/app/src/assets/less/base.less
+++ b/app/src/assets/less/base.less
@@ -176,7 +176,7 @@ body {
 	margin: 0;
 	padding: 0;
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-	font-family: "Microsoft YaHei", "PingFang SC", Arial, Helvetica, "freesans",
+	font-family: Helvetica, "Microsoft YaHei", "PingFang SC", Arial, "freesans",
 		sans-serif;
 	-webkit-text-size-adjust: none;
 	overflow: auto;
