--- a/app/src/entries/neowallet/components/root/index.less
+++ b/app/src/entries/neowallet/components/root/index.less
@@ -202,4 +202,16 @@
 			background-size: 100% 100%;
 		}
 	}
+	.box6 {
+		position: absolute;
+		left: 0.4rem;
+		right: 0.4rem;
+		bottom: 0.4rem;
+		top: 2.71rem;
+		background: #2e2e4c;
+		border-radius: 0.08rem;
+		box-sizing: border-box;
+		overflow: auto;
+		padding: 0.2rem;
+	}
 }
