--- a/app/src/entries/neowallet/components/root/index.less
+++ b/app/src/entries/neowallet/components/root/index.less
@@ -214,5 +214,26 @@
 		overflow: auto;
 		padding: 0.2rem;
 		color: #fff;
+		.record-item {
+			padding: 0.1rem 0;
+			border-bottom: 1px solid #373755;
+			font-size: 0.16rem;
+			.record-icon {
+				width: 0.22rem;
+				height: 0.22rem;
+				margin-right: 0.2rem;
+			}
+			.record-address {
+			}
+			.record-num {
+				margin-left: 0.2rem;
+			}
+			&:hover .record-address {
+				color: #47d184;
+			}
+			&:nth-last-child(1) {
+				border-bottom: none;
+			}
+		}
 	}
 }
