--- a/app/src/entries/ethwallet/components/root/index.less
+++ b/app/src/entries/ethwallet/components/root/index.less
@@ -106,6 +106,10 @@
 			.t1 {
 				font-size: 0.14rem;
 			}
+			.t2 {
+				color: #47d184;
+				font-size: 0.14rem;
+			}
 		}
 		.input-box {
 			border-radius: 0.08rem;
@@ -140,6 +144,22 @@
 		}
 		.ant-select-arrow {
 			color: #fff;
+		}
+		.ant-slider-rail {
+			background: #47d184;
+		}
+		.sliderbox {
+			margin: 0 0.2rem;
+		}
+		.slideritem {
+			margin-top: 0.2rem;
+		}
+		.ant-slider-track {
+			background: #ef7247;
+		}
+		.ant-slider-handle {
+			border: none;
+			background: linear-gradient(to right, #ffba3c, #e74308);
 		}
 	}
 	.box5 {
