--- a/app/src/entries/wallet/components/root/index.less
+++ b/app/src/entries/wallet/components/root/index.less
@@ -9,7 +9,7 @@
 	}
 	.wallet-ctrl {
 		box-sizing: border-box;
-		padding: 0.2rem 0.4rem;
+		padding: 0.2rem 0;
 		display: flex;
 		.wallet-ctrlbtn {
 			width: 2.4rem;
