--- a/app/src/entries/wallet/components/root/index.less
+++ b/app/src/entries/wallet/components/root/index.less
@@ -29,6 +29,16 @@
 				height: 0.48rem;
 				margin-bottom: 0.1rem;
 			}
+			&.disabled {
+				color: #9b9b9b;
+			}
+			.t1 {
+				text-align: center;
+			}
+			.t2 {
+				font-size: 0.12rem;
+				color: #55557d;
+			}
 		}
 	}
 	.wallet-container {
