--- a/app/src/entries/neowallet/components/root/index.less
+++ b/app/src/entries/neowallet/components/root/index.less
@@ -171,6 +171,7 @@
 			height: 2rem;
 			box-sizing: border-box;
 			border: 0.05rem solid #fff;
+			display: inline-block;
 		}
 		.btn-box {
 			padding: 0.5rem 0;
