--- a/app/src/entries/ethwallet/components/root/index.less
+++ b/app/src/entries/ethwallet/components/root/index.less
@@ -24,6 +24,9 @@
 			font-size: 0.2rem;
 			margin-top: 0.2rem;
 			color: #fff;
+			overflow: hidden;
+			text-overflow: ellipsis;
+			white-space: nowrap;
 		}
 	}
 	.box2 {
@@ -179,6 +182,7 @@
 			height: 2rem;
 			box-sizing: border-box;
 			border: 0.05rem solid #fff;
+			display: inline-block;
 		}
 		.btn-box {
 			padding: 0.5rem 0;
