--- a/app/src/assets/less/common.less
+++ b/app/src/assets/less/common.less
@@ -318,11 +318,14 @@ body {
 	.content-container {
 		flex: 1;
 		display: flex;
-		flex-direction: column;
+		flex-flow: column;
 		height: 100%;
+		min-width: 0;
+		overflow: auto;
 		.content {
 			flex: 1;
-			overflow: scroll;
+			overflow: auto;
+			min-width: 0;
 		}
 	}
 }
