--- a/app/src/entries/wallet/components/root/index.less
+++ b/app/src/entries/wallet/components/root/index.less
@@ -12,7 +12,7 @@
 		padding: 0.2rem 0;
 		display: flex;
 		.wallet-ctrlbtn {
-			width: 2.4rem;
+			flex: 0 1 2.4rem;
 			height: 1.6rem;
 			align-items: center;
 			background: #2e2e4c;
