--- a/app/src/entries/importprivate/components/root/index.less
+++ b/app/src/entries/importprivate/components/root/index.less
@@ -23,6 +23,7 @@
 		outline: none;
 		box-sizing: border-box;
 		padding: 0.1rem;
+		color: rgba(255, 255, 255, 0.4);
 	}
 	.private-btn {
 		padding: 1.53rem 0 0.36rem 0;
