--- a/app/src/assets/less/common.less
+++ b/app/src/assets/less/common.less
@@ -343,6 +343,35 @@ body {
 	font-size: 0.18rem;
 	color: #fff;
 	cursor: pointer;
+	box-sizing: border-box;
+}
+.button-default {
+	background: #fff;
+	width: 2rem;
+	height: 0.44rem;
+	border-radius: 0.08rem;
+	line-height: 0.44rem;
+	text-align: center;
+	display: inline-block;
+	font-size: 0.18rem;
+	color: #404040;
+	cursor: pointer;
+	border: 1px solid #c9c6c6;
+	box-sizing: border-box;
+}
+.button-disabled {
+	background: #fff;
+	width: 2rem;
+	height: 0.44rem;
+	border-radius: 0.08rem;
+	line-height: 0.44rem;
+	text-align: center;
+	display: inline-block;
+	font-size: 0.18rem;
+	color: #a4a4a4;
+	cursor: pointer;
+	border: 1px solid #c9c6c6;
+	box-sizing: border-box;
 }
 .line-orange {
 	background: linear-gradient(to right, #ef7247, #e63d00);
