--- a/app/src/entries/login/components/root/index.less
+++ b/app/src/entries/login/components/root/index.less
@@ -4,8 +4,7 @@
 	justify-content: center;
 	height: 100%;
 	.login-content {
-		width: 3.8rem;
-		height: 3rem;
+		width: 4.6rem;
 		background: #2e2e4c;
 		border-radius: 0.08rem;
 		.login-header {
@@ -24,22 +23,89 @@
 		}
 		.loginname {
 			width: 1.16rem;
+			margin-bottom: 0.35rem;
+		}
+		.login-item {
+			text-align: center;
+			padding: 0.07rem 0;
+		}
+		.input-box {
+			display: inline-block;
+			width: 3.08rem;
+			height: 0.44rem;
+			border-radius: 0.08rem;
+			overflow: hidden;
+			position: relative;
+			.input {
+				box-sizing: border-box;
+				width: 100%;
+				height: 100%;
+				padding: 0 0.1rem;
+				background: rgba(0, 0, 0, 0.17);
+				color: rgba(255, 255, 255, 0.4);
+			}
+			.send {
+				position: absolute;
+				top: 0.1rem;
+				right: 0.1rem;
+				display: block;
+			}
+		}
+		.login-forget {
+			text-align: right;
+			width: 3.08rem;
+			margin: 0 auto;
+
+			span {
+				cursor: pointer;
+				color: rgba(255, 255, 255, 0.54);
+			}
 		}
 		.login-btn {
 			text-align: center;
-			margin-top: 1.12rem;
+			padding: 0.3rem 0;
 			.loginbtn {
 				display: inline-block;
-				width: 2.2rem;
+				width: 3.08rem;
 				height: 0.44rem;
 				line-height: 0.44rem;
 				color: #fff;
-				font-size: 0.2rem;
+				font-size: 0.18rem;
 				border-radius: 0.04rem;
 				font-weight: 200;
 				cursor: pointer;
 				background: linear-gradient(to right, #82e0ac, #47c47f);
 			}
+			.signup {
+				color: #47c47f;
+				padding: 0.05rem 0;
+				cursor: pointer;
+			}
 		}
+	}
+	.register,
+	.forget {
+		position: relative;
+		.login-name {
+			margin: 0;
+			padding: 0.2rem 0;
+			.loginname {
+				margin: 0;
+			}
+		}
+		.icon-return {
+			position: absolute;
+			left: 0.29rem;
+			top: 0.25rem;
+		}
+	}
+	.icon-return {
+		display: inline-block;
+		cursor: pointer;
+		background: url("../../../../assets/images/zuo_ico_s.png") left top
+			no-repeat;
+		background-size: 100% 100%;
+		width: 0.11rem;
+		height: 0.18rem;
 	}
 }
