--- a/app/src/entries/importwallet/components/root/index.less
+++ b/app/src/entries/importwallet/components/root/index.less
@@ -5,6 +5,30 @@
 		color: #47d184;
 		text-align: center;
 	}
+	.wallet-type {
+		display: flex;
+		justify-content: center;
+		.type-item {
+			color: #fff;
+			text-align: center;
+			flex: 0 1 2rem;
+			cursor: pointer;
+			padding: 0.2rem 0;
+			box-sizing: border-box;
+			border-radius: 0.08rem;
+			&:hover {
+				background: rgba(255, 255, 255, 0.17);
+			}
+			img {
+				width: 1rem;
+				height: 1rem;
+			}
+			.t {
+				font-size: 0.18rem;
+				margin-top: 0.2rem;
+			}
+		}
+	}
 	.import-container {
 		text-align: center;
 		color: #fff;
