--- a/app/src/entries/wallet/components/root/index.less
+++ b/app/src/entries/wallet/components/root/index.less
@@ -65,6 +65,14 @@
 				font-size: 0.18rem;
 			}
 		}
+		.watch {
+			color: #47d184;
+			vertical-align: middle;
+			padding: 0.03rem 0.1rem;
+			border-radius: 0.2rem;
+			border: 1px solid #47d184;
+			margin-left: 0.1rem;
+		}
 		.group-main {
 			position: absolute;
 			left: 0.4rem;
