--- a/app/src/entries/importwallet/components/root/index.less
+++ b/app/src/entries/importwallet/components/root/index.less
@@ -43,6 +43,9 @@
 			align-items: center;
 			justify-content: center;
 			border-radius: 0.08rem;
+			&.disnone {
+				background: none;
+			}
 			.t1 {
 				font-size: 0.18rem;
 				margin-top: 0.05rem;
