--- a/app/src/entries/watchwallet/components/root/index.less
+++ b/app/src/entries/watchwallet/components/root/index.less
@@ -16,23 +16,27 @@
 			color: #5c89eb;
 			font-size: 0.24rem;
 		}
-		.watch {
-			color: #ff7044;
-			padding: 0.05rem 0.15rem;
-			border: 1px solid #ff7044;
-			border-radius: 0.2rem;
-			font-size: 0.14rem;
-			vertical-align: middle;
-			margin-left: 0.2rem;
-		}
 		.name {
 			font-size: 0.3rem;
 			color: #fff;
+			vertical-align: middle;
 		}
 		.address {
 			font-size: 0.2rem;
 			margin-top: 0.2rem;
 			color: #fff;
+			overflow: hidden;
+			text-overflow: ellipsis;
+			white-space: nowrap;
+		}
+		.watch {
+			color: #ef7247;
+			font-size: 0.14rem;
+			padding: 0.03rem 0.1rem;
+			border-radius: 0.2rem;
+			border: 1px solid #ef7247;
+			margin-left: 0.1rem;
+			vertical-align: middle;
 		}
 	}
 	.box2 {
@@ -62,9 +66,6 @@
 			justify-content: center;
 			// align-items: center;
 			cursor: pointer;
-			&.disabled {
-				background: #c9c6c6;
-			}
 			.t2 {
 				font-size: 0.12rem;
 				line-height: 1;
@@ -99,6 +100,161 @@
 			}
 			.t1 {
 				font-size: 0.12rem;
+			}
+		}
+	}
+	.box4 {
+		margin-top: 0.2rem;
+		background: #2e2e4c;
+		border-radius: 0.08rem;
+		box-sizing: border-box;
+		padding: 0.2rem;
+		color: #fff;
+		.send-item {
+			margin-bottom: 0.3rem;
+		}
+		.send-name {
+			margin-bottom: 0.1rem;
+			font-size: 0.18rem;
+			.t1 {
+				font-size: 0.14rem;
+			}
+			.t2 {
+				color: #47d184;
+				font-size: 0.14rem;
+			}
+		}
+		.input-box {
+			border-radius: 0.08rem;
+			overflow: hidden;
+		}
+		.input {
+			width: 100%;
+			height: 0.6rem;
+			background: rgba(0, 0, 0, 0.21);
+
+			border: none;
+			box-sizing: border-box;
+			padding: 0 0.1rem;
+			font-size: 0.18rem;
+			color: rgba(255, 255, 255, 0.4);
+		}
+		.btn-box {
+			padding: 0.5rem 0 0.3rem 0;
+			text-align: center;
+		}
+		.ant-select-selection--single {
+			height: 0.6rem;
+			border: none;
+		}
+		.ant-select-selection {
+			border-radius: 0;
+			background: linear-gradient(to right, #ef7247, #e63d00);
+		}
+		.ant-select-selection__rendered {
+			line-height: 0.6rem;
+			color: #fff;
+		}
+		.ant-select-arrow {
+			color: #fff;
+		}
+		.ant-slider-rail {
+			background: #47d184;
+		}
+		.sliderbox {
+			margin: 0 0.2rem;
+		}
+		.slideritem {
+			margin-top: 0.2rem;
+		}
+		.ant-slider-track {
+			background: #ef7247;
+		}
+		.ant-slider-handle {
+			border: none;
+			background: linear-gradient(to right, #ffba3c, #e74308);
+		}
+	}
+	.box5 {
+		margin-top: 0.2rem;
+		background: #2e2e4c;
+		border-radius: 0.08rem;
+		box-sizing: border-box;
+		text-align: center;
+		color: #fff;
+		.receive-title {
+			padding: 0.4rem 0;
+			font-size: 0.24rem;
+		}
+
+		.qcode {
+			width: 2rem;
+			height: 2rem;
+			box-sizing: border-box;
+			border: 0.05rem solid #fff;
+			display: inline-block;
+		}
+		.btn-box {
+			padding: 0.5rem 0;
+			.button-green {
+				width: 1.6rem;
+				margin: 0 0.2rem;
+			}
+			.t {
+				vertical-align: middle;
+				margin-left: 0.05rem;
+			}
+		}
+		.icon-copy {
+			background: url("../../../../assets/images/copy_ico.png") left top
+				no-repeat;
+			display: inline-block;
+			vertical-align: middle;
+			width: 0.19rem;
+			height: 0.19rem;
+			background-size: 100% 100%;
+		}
+		.icon-print {
+			background: url("../../../../assets/images/dayin_ico.png") left top
+				no-repeat;
+			display: inline-block;
+			vertical-align: middle;
+			width: 0.19rem;
+			height: 0.19rem;
+			background-size: 100% 100%;
+		}
+	}
+	.box6 {
+		position: absolute;
+		left: 0.4rem;
+		right: 0.4rem;
+		bottom: 0.4rem;
+		top: 2.71rem;
+		background: #2e2e4c;
+		border-radius: 0.08rem;
+		box-sizing: border-box;
+		overflow: auto;
+		padding: 0.2rem;
+		color: #fff;
+		.record-item {
+			padding: 0.1rem 0;
+			border-bottom: 1px solid #373755;
+			font-size: 0.16rem;
+			.record-icon {
+				width: 0.22rem;
+				height: 0.22rem;
+				margin-right: 0.2rem;
+			}
+			.record-address {
+			}
+			.record-num {
+				margin-left: 0.2rem;
+			}
+			&:hover .record-address {
+				color: #47d184;
+			}
+			&:nth-last-child(1) {
+				border-bottom: none;
 			}
 		}
 	}
