--- a/app/src/entries/keystore/components/root/index.less
+++ b/app/src/entries/keystore/components/root/index.less
@@ -16,8 +16,8 @@
 			border-radius: 8px;
 			overflow: hidden;
 			.titleImg {
-				width: 1.44rem;
-				height: 1.44rem;
+				width: 1.5rem;
+				height: 1.5rem;
 				margin: 0 auto;
 				margin-top: 0.26rem;
 				box-sizing: border-box;
@@ -36,6 +36,8 @@
 				font-size: 0.14rem;
 				line-height: 0.22rem;
 				color: #fff;
+				word-break: break-all;
+				word-wrap: break-word;
 			}
 			.btnBox {
 				margin-top: 0.3rem;
