--- a/app/src/assets/less/message.less
+++ b/app/src/assets/less/message.less
@@ -38,6 +38,8 @@
 	.glob-message-text {
 		padding: 0.75rem 0.75rem 0 0.75rem;
 		box-sizing: border-box;
+		word-break: break-all;
+		word-wrap: break-word;
 	}
 	.btn {
 		display: inline-block;
