--- a/app/src/entries/mnemonic/components/root/index.less
+++ b/app/src/entries/mnemonic/components/root/index.less
@@ -1,4 +1,4 @@
-.mnemonic {
+.mnemonic.mnemonic1 {
 	.mnemonic-content {
 		.title {
 			text-align: center;
@@ -11,7 +11,7 @@
 			margin: 0 auto;
 			margin-top: 0.56rem;
 			width: 7.76rem;
-			height: 5.32rem;
+			height: auto !important;
 			background: rgba(46, 46, 76, 1);
 			border-radius: 8px;
 			overflow: hidden;
