--- a/app/src/entries/project/components/root/index.less
+++ b/app/src/entries/project/components/root/index.less
@@ -72,5 +72,49 @@
 				}
 			}
 		}
+		.search-list {
+			width: 5.22rem;
+			position: absolute;
+			top: 1.9rem;
+			bottom: 0.1rem;
+			overflow: auto;
+			.search-list-ul {
+				.search-cell {
+					width: 5.22rem;
+					height: 0.67rem;
+					display: flex;
+					align-items: center;
+					border-bottom: 1px solid #17172e;
+					box-sizing: border-box;
+					.imgbox {
+						width: 0.43rem;
+						height: 0.43rem;
+						img {
+							width: 100%;
+							height: 100%;
+						}
+					}
+					.messBox {
+						margin-left: 0.2rem;
+						height: 0.43rem;
+						color: #fff;
+						display: flex;
+						flex-direction: column;
+						justify-content: space-between;
+						.name {
+							font-size: 0.18rem;
+							line-height: 0.22rem;
+						}
+						.mess {
+							font-size: 0.14rem;
+							line-height: 0.17rem;
+							overflow: hidden;
+							text-overflow: ellipsis;
+							white-space: nowrap;
+						}
+					}
+				}
+			}
+		}
 	}
 }
