--- a/app/src/entries/neowallet/components/root/index.less
+++ b/app/src/entries/neowallet/components/root/index.less
@@ -16,7 +16,7 @@
 			color: #5c89eb;
 			font-size: 0.24rem;
 		}
-		.watch {
+		.backup {
 			color: #ff7044;
 			padding: 0.05rem 0.15rem;
 			border: 1px solid #ff7044;
