--- a/app/src/entries/watchwallet/components/root/index.less
+++ b/app/src/entries/watchwallet/components/root/index.less
@@ -64,8 +64,10 @@
 			color: #fff;
 			flex-flow: column;
 			justify-content: center;
-			// align-items: center;
 			cursor: pointer;
+			&.disabled {
+				cursor: default;
+			}
 			.t2 {
 				font-size: 0.12rem;
 				line-height: 1;
