--- a/app/src/entries/ethwallet/components/root/index.less
+++ b/app/src/entries/ethwallet/components/root/index.less
@@ -5,6 +5,15 @@
 	padding: 0 0.4rem;
 	.box1 {
 		padding: 0.4rem 0;
+		.backup {
+			color: #ff7044;
+			padding: 0.05rem 0.15rem;
+			border: 1px solid #ff7044;
+			border-radius: 0.2rem;
+			font-size: 0.14rem;
+			vertical-align: middle;
+			margin-left: 0.2rem;
+		}
 		.icon {
 			width: 0.8rem;
 			height: 0.8rem;
