--- a/app/src/entries/gas/components/root/index.less
+++ b/app/src/entries/gas/components/root/index.less
@@ -11,17 +11,16 @@
 			margin: 0 auto;
 			margin-top: 0.56rem;
 			width: 7.76rem;
-			height: 5.32rem;
 			background: rgba(46, 46, 76, 1);
 			border-radius: 8px;
 			overflow: hidden;
 			display: flex;
 			justify-content: center;
+			align-items: flex-start;
+			padding-top: 0.4rem;
 			.gasBox {
-				margin-top: 0.66rem;
-				margin-right: 0.33rem;
+				margin: 0 0.3rem;
 				width: 2.1rem;
-				height: 2.1rem;
 				background: rgba(71, 209, 132, 1);
 				border-radius: 8px;
 				color: #fff;
@@ -37,7 +36,7 @@
 				}
 				.money {
 					margin-top: 0.1rem;
-					font-size: 0.4rem;
+					font-size: 0.24rem;
 					line-height: 0.48rem;
 					overflow: hidden;
 					text-overflow: ellipsis;
