--- a/app/src/entries/wallet/components/root/index.less
+++ b/app/src/entries/wallet/components/root/index.less
@@ -73,6 +73,14 @@
 			border: 1px solid #47d184;
 			margin-left: 0.1rem;
 		}
+		.unback {
+			color: #ff7044;
+			vertical-align: middle;
+			padding: 0.03rem 0.1rem;
+			border-radius: 0.2rem;
+			border: 1px solid #ff7044;
+			margin-left: 0.1rem;
+		}
 		.group-main {
 			position: absolute;
 			left: 0.4rem;
