--- a/app/src/entries/project/components/root/index.less
+++ b/app/src/entries/project/components/root/index.less
@@ -67,7 +67,7 @@
 					color: #fff;
 					font-size: 0.16rem;
 					border-radius: 0.08rem;
-					background: #2e2e4c;
+					background: linear-gradient(to bottom, #525275, #262642);
 					cursor: pointer;
 				}
 			}
@@ -75,7 +75,7 @@
 		.search-list {
 			width: 5.22rem;
 			position: absolute;
-			top: 1.9rem;
+			top: 2.5rem;
 			bottom: 0.1rem;
 			overflow: auto;
 			.search-list-ul {
