--- a/app/src/entries/wallet/components/root/index.less
+++ b/app/src/entries/wallet/components/root/index.less
@@ -5,7 +5,7 @@
 		text-align: center;
 		color: #47d184;
 		font-size: 0.36rem;
-		padding: 0.4rem 0;
+		padding: 0.4rem 0 0.34rem 0;
 	}
 	.wallet-ctrl {
 		box-sizing: border-box;
