--- a/app/src/entries/orderlist/components/root/index.less
+++ b/app/src/entries/orderlist/components/root/index.less
@@ -110,7 +110,7 @@
 			background: #fff;
 			overflow: hidden;
 			.confirm-inline {
-				width: 50%;
+				width: 0;
 				height: 100%;
 				background: #47d184;
 			}
