--- a/app/src/entries/wallet/components/root/index.less
+++ b/app/src/entries/wallet/components/root/index.less
@@ -72,6 +72,8 @@
 			border-radius: 0.2rem;
 			border: 1px solid #47d184;
 			margin-left: 0.1rem;
+			font-size: 0.12rem;
+			font-weight: 200;
 		}
 		.unback {
 			color: #ff7044;
@@ -80,6 +82,8 @@
 			border-radius: 0.2rem;
 			border: 1px solid #ff7044;
 			margin-left: 0.1rem;
+			font-size: 0.12rem;
+			font-weight: 200;
 		}
 		.group-main {
 			position: absolute;
