--- a/app/src/entries/gas/components/root/index.less
+++ b/app/src/entries/gas/components/root/index.less
@@ -11,7 +11,7 @@
 			margin: 0 auto;
 			margin-top: 0.56rem;
 			width: 7.76rem;
-			background: rgba(46, 46, 76, 1);
+			// background: rgba(46, 46, 76, 1);
 			border-radius: 8px;
 			overflow: hidden;
 			display: flex;
