--- a/app/src/assets/less/common.less
+++ b/app/src/assets/less/common.less
@@ -376,3 +376,6 @@ body {
 .line-orange {
 	background: linear-gradient(to right, #ef7247, #e63d00);
 }
+input::-webkit-input-placeholder {
+	color: #53536b;
+}
