--- a/app/src/entries/project/components/root/index.less
+++ b/app/src/entries/project/components/root/index.less
@@ -86,6 +86,8 @@
 					align-items: center;
 					border-bottom: 1px solid #17172e;
 					box-sizing: border-box;
+					display: flex;
+					align-items: center;
 					.imgbox {
 						width: 0.43rem;
 						height: 0.43rem;
@@ -101,6 +103,7 @@
 						display: flex;
 						flex-direction: column;
 						justify-content: space-between;
+						min-width: 0;
 						.name {
 							font-size: 0.18rem;
 							line-height: 0.22rem;
