--- a/app/src/entries/importwallet/components/root/index.less
+++ b/app/src/entries/importwallet/components/root/index.less
@@ -16,12 +16,19 @@
 			padding: 0.2rem 0;
 			box-sizing: border-box;
 			border-radius: 0.08rem;
+
 			&:hover {
 				background: rgba(255, 255, 255, 0.17);
+				color: #47d184;
+				img {
+					width: 1.2rem;
+					height: 1.2rem;
+				}
 			}
 			img {
 				width: 1rem;
 				height: 1rem;
+				transition: all 0.3s linear;
 			}
 			.t {
 				font-size: 0.18rem;
