--- a/app/src/entries/managewallet/components/root/index.less
+++ b/app/src/entries/managewallet/components/root/index.less
@@ -52,10 +52,13 @@
 						width: 2.16rem;
 						height: 0.4rem;
 						border-radius: 0.35rem;
-						background: rgba(0, 0, 0, 0.17);
+						background: #292946;
 						line-height: 0.4rem;
 						text-align: center;
 						color: #fff;
+						&.has {
+							background: #23233f;
+						}
 						&::-webkit-input-placeholder {
 							color: rgba(255, 255, 255, 0.17);
 						}
